Restructured a bit (also added some js extensibility and a hidden navbar to be reworded and the menu moved inside of it)

--- a/www/build.gradle
+++ b/www/build.gradle
@@ -1,1 +1,10 @@
 apply plugin: 'application'
+
+/*
+task copyWebFiles(type: Copy) {
+    from 'src/web'             // source directory
+    into '../path/to/htdocs'   // target directory
+}
+
+preBuild.dependsOn copyWebFiles  // execute task before build
+*/
